# to-yolov8

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  publish.yml  test.yml
src/: cli.py
src/to-yolov8/: converter.py  yolo_to_yolov8_converter.py
src/to_yolov8/: converter.py  custom_errors.py  yolo_to_yolov8_converter.py
tests/: test_yolov8_cli.py  test_yolov8_converter.py
tests/no_pics_dir/: notes.json
tests/no_pics_dir/labels/: .pre-commit-config.yaml
tests/utils/: create_dummy_files.py
tests/yolo_format/: classes.txt  notes.json
tests/yolo_format/labels/: dummy_3.txt
